--- a/app/src/Components/PassengerList/PassengerList.scss
+++ b/app/src/Components/PassengerList/PassengerList.scss
@@ -5,18 +5,15 @@
     
     .header, .row {
       display: flex;
-      
       div {
         flex: 1;
-        padding: 0.2rem 0.4em;
-        border: 1px solid rgb(238, 238, 238);
+        padding: 0.5rem 0.5em;
+        // border: 1px solid #bd93f9;
       }
     }
     
     .header {
-      background-color: rgb(238, 238, 238);
-      div { 
-        cursor: pointer;
-      }
+      background-color: #44475a;
+      color:#50fa7b;
     }
   }
