--- a/app/src/Components/PassengerList/PassengerList.css
+++ b/app/src/Components/PassengerList/PassengerList.css
@@ -6,9 +6,7 @@
     display: flex; }
     .table .header div, .table .row div {
       flex: 1;
-      padding: 0.2rem 0.4em;
-      border: 1px solid #eeeeee; }
+      padding: 0.5rem 0.5em; }
   .table .header {
-    background-color: #eeeeee; }
-    .table .header div {
-      cursor: pointer; }
+    background-color: #44475a;
+    color: #50fa7b; }
