--- a/app/src/Components/SearchBar/SearchBar.css
+++ b/app/src/Components/SearchBar/SearchBar.css
@@ -1,17 +1,16 @@
 .search-bar {
   text-align: center;
   display: inline-block;
-  margin: 20px; }
+  width: 100vw;
+  margin: 20px auto; }
   .search-bar input {
     padding: 12px;
     border-radius: 5px;
     border: 1px solid transparent;
     outline: none;
-    background: #283747;
-    color: #5DADE2;
-    font-size: 16px;
-    text-align: center;
-    border-bottom: 1px solid #90A4AE;
-    font-family: 'Open Sans'; }
+    background: #44475a;
+    color: #8be9fd;
+    font-size: 18px;
+    text-align: center; }
   .search-bar input:focus {
-    border: 1px solid #3498DB; }
+    border: 1px solid #8be9fd; }
