--- a/app/src/Components/SearchBar/SearchBar.scss
+++ b/app/src/Components/SearchBar/SearchBar.scss
@@ -1,20 +1,19 @@
 .search-bar {
     text-align: center;
     display: inline-block;
-    margin: 20px;
+    width: 100vw;
+    margin: 20px auto;
         input {
             padding: 12px;
             border-radius: 5px;
             border: 1px solid transparent;
             outline: none;
-            background: #283747;
-            color: #5DADE2;
-            font-size: 16px;
+            background: #44475a;
+            color: #8be9fd;
+            font-size: 18px;
             text-align: center;
-            border-bottom: 1px solid #90A4AE;
-            font-family: 'Open Sans';
         }
     input:focus {
-    border: 1px solid #3498DB;
+    border: 1px solid #8be9fd;
   }
 }
