--- a/app/src/Components/PassengerList/PassengerList.scss
+++ b/app/src/Components/PassengerList/PassengerList.scss
@@ -1,19 +1,20 @@
 .table {
-    margin: 1em;
+    margin: 4em;
     display: flex;
     flex-direction: column;
-    
+    box-shadow: 5px 50px 100px rgba(0,0,0,.75), 10px 15px 35px rgba(50,50,93,.15), 1px 5px 15px rgba(0,0,0,.1);
     .header, .row {
       display: flex;
       div {
         flex: 1;
         padding: 0.5rem 0.5em;
         // border: 1px solid #bd93f9;
+        border-bottom: 0.3px solid #44475a;
       }
     }
     
     .header {
       background-color: #44475a;
-      color:#50fa7b;
+      color:#8be9fd;
     }
   }
