post message work

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -1,4 +1,14 @@
 #App {
     color: #f8f8f2;
     width: 100vw;
+    font-family: 'Roboto', sans-serif;
+}
+code {
+    width: 100vw;
+    height: 3em;
+    color: #50fa7b;
+    font-size: 80px;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle
 }
