--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,13 @@
 #App {
   color: #f8f8f2;
-  width: 100vw; }
+  width: 100vw;
+  font-family: 'Roboto', sans-serif; }
+
+code {
+  width: 100vw;
+  height: 3em;
+  color: #50fa7b;
+  font-size: 80px;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle; }
