--- a/app/src/Components/Modal/Modal.scss
+++ b/app/src/Components/Modal/Modal.scss
@@ -21,10 +21,10 @@
     position: relative;
     width: 40vw;
     height: 40vh;
-    padding: 30px;
+    padding: 20px;
     box-sizing: border-box;
-    background-color: white;
-    margin: 40px auto;
+    background-color: #44475a;
+    margin: 30vh auto;
     border-radius: 4px;
     z-index:2;
     box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
