--- a/app/src/Components/SearchBar/SearchBar.css
+++ b/app/src/Components/SearchBar/SearchBar.css
@@ -2,15 +2,18 @@
   text-align: center;
   display: inline-block;
   width: 100vw;
-  margin: 20px auto; }
+  margin: 30px auto 0px; }
   .search-bar input {
     padding: 12px;
-    border-radius: 5px;
+    width: 500px;
+    border-radius: 2px;
     border: 1px solid transparent;
     outline: none;
-    background: #44475a;
     color: #8be9fd;
+    background: #44475a;
     font-size: 18px;
     text-align: center; }
   .search-bar input:focus {
     border: 1px solid #8be9fd; }
+  .search-bar input::placeholder {
+    color: #8be9fd; }
