--- a/app/src/Components/SearchBar/SearchBar.scss
+++ b/app/src/Components/SearchBar/SearchBar.scss
@@ -2,18 +2,22 @@
     text-align: center;
     display: inline-block;
     width: 100vw;
-    margin: 20px auto;
+    margin: 30px auto 0px;
         input {
             padding: 12px;
-            border-radius: 5px;
+            width: 500px;
+            border-radius: 2px;
             border: 1px solid transparent;
             outline: none;
-            background: #44475a;
             color: #8be9fd;
+            background: #44475a;
             font-size: 18px;
             text-align: center;
         }
     input:focus {
     border: 1px solid #8be9fd;
   }
+    input::placeholder{
+        color: #8be9fd;
+    }
 }
